# PilotDB

./: .gitignore  README.md  clean_cache.sh  demo_config.yml  evaluate.py  evaluation_plan.txt  install.sh  optimize.py  pilotdb_cli.py  pilotdb_client.py  pilotdb_server.py  pyproject.toml  query1.sql  query12.sql  query14.sql  query17.sql  query19.sql  query22.sql  query4.sql  query5.sql  query6.sql  query7.sql  query8.sql  query9.sql  query9test.sql  requirements.txt  rewriter.py  run.sh  run_duckdb.sh  run_pilot.py  run_pilotdb.py  run_postgres.sh  run_sensi.sh  run_sqlserver.sh  sample_rate.json  setup.py  sql_server_install.sh  test.sql  todo.md
db_configs/: dbname_benchmark.yml  duckdb.yml  duckdb_clickhouse.yml  duckdb_instacart.yml  duckdb_ssb.yml  duckdb_tpcds.yml  duckdb_tpch.yml  postgres.yml  postgres_clickhouse.yml  postgres_instacart.yml  postgres_skew.yml  postgres_ssb.yml  postgres_template.yml  postgres_tpcds.yml  postgres_tpch.yml  sqlserver_clickhouse.yml  sqlserver_instacart.yml  sqlserver_ssb.yml  sqlserver_template.yml  sqlserver_tpcds.yml  sqlserver_tpch.yml
dockerfile/: .env.example  Dockerfile  compose.yml  start_pilotdb_server.sh
example/: duckdb_config.yml
explain_duckdb/: clickhouse-1.sql.1.json  clickhouse-1.sql.2.json  clickhouse-1.sql.3.json  clickhouse-1.sql.4.json  clickhouse-1.sql.5.json  clickhouse-2.sql.1.json  clickhouse-2.sql.2.json  clickhouse-2.sql.3.json  clickhouse-2.sql.4.json  clickhouse-2.sql.5.json  clickhouse-21.sql.1.json  clickhouse-21.sql.2.json  clickhouse-21.sql.3.json  clickhouse-21.sql.4.json  run_duckdb.sh  (+118 more)
(+1727 files in other folders)
